{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 127,
  "lineage": "32b2ec24-ec17-e9d3-3ad6-0607d920358e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ser-1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:387074154401:subnet/subnet-09267e6fa742b797a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09267e6fa742b797a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "387074154401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0f35e5b6d792760ae"
          }
        },
        {
          "index_key": "ser-2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:387074154401:subnet/subnet-04c505681d6112d7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c505681d6112d7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "387074154401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0f35e5b6d792760ae"
          }
        },
        {
          "index_key": "ser-3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:387074154401:subnet/subnet-0bba4869ae8eb6b49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bba4869ae8eb6b49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "387074154401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0f35e5b6d792760ae"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:387074154401:vpc/vpc-0f35e5b6d792760ae",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0acb33acada3c60f5",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-09d9084ee3508fd50",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f35e5b6d792760ae",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-068bcd43303e9d93e",
            "owner_id": "387074154401"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:387074154401:loadbalancer/app/terraformers-alb/8614f801f591964e",
            "arn_suffix": "app/terraformers-alb/8614f801f591964e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraformers-alb-989780563.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:387074154401:loadbalancer/app/terraformers-alb/8614f801f591964e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraformers-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-008a8682197c070f0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04c505681d6112d7d"
              },
              {
                "subnet_id": "subnet-09267e6fa742b797a"
              },
              {
                "subnet_id": "subnet-0bba4869ae8eb6b49"
              }
            ],
            "subnets": [
              "subnet-04c505681d6112d7d",
              "subnet-09267e6fa742b797a",
              "subnet-0bba4869ae8eb6b49"
            ],
            "vpc_id": "vpc-0f35e5b6d792760ae",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "data.aws_subnet.public_subnet",
            "module.load_balancer.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:387074154401:listener/app/terraformers-alb/8614f801f591964e/5207f0bc7ad63c1f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:387074154401:targetgroup/terraformers-alb-target-group/0987dd24af27b76f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:387074154401:listener/app/terraformers-alb/8614f801f591964e/5207f0bc7ad63c1f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:387074154401:loadbalancer/app/terraformers-alb/8614f801f591964e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet.public_subnet",
            "module.load_balancer.aws_lb.alb",
            "module.load_balancer.aws_lb_target_group.this",
            "module.load_balancer.aws_security_group.alb",
            "module.load_balancer.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:387074154401:targetgroup/terraformers-alb-target-group/0987dd24af27b76f",
            "arn_suffix": "targetgroup/terraformers-alb-target-group/0987dd24af27b76f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:387074154401:targetgroup/terraformers-alb-target-group/0987dd24af27b76f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terraformers-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f35e5b6d792760ae"
          },
          "dependencies": [
            "module.load_balancer.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "servidor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:387074154401:targetgroup/terraformers-alb-target-group/0987dd24af27b76f-20230412231620980900000005",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:387074154401:targetgroup/terraformers-alb-target-group/0987dd24af27b76f",
            "target_id": "i-04d0e1fc34f418034"
          },
          "dependencies": [
            "data.aws_subnet.public_subnet",
            "module.load_balancer.aws_lb_target_group.this",
            "module.load_balancer.data.aws_vpc.default",
            "module.servidores_ec2.aws_instance.servidor",
            "module.servidores_ec2.aws_security_group.mi_grupo_de_seguridad"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:387074154401:targetgroup/terraformers-alb-target-group/0987dd24af27b76f-20230412231621138200000006",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:387074154401:targetgroup/terraformers-alb-target-group/0987dd24af27b76f",
            "target_id": "i-0bbf8d16b019e1730"
          },
          "dependencies": [
            "data.aws_subnet.public_subnet",
            "module.load_balancer.aws_lb_target_group.this",
            "module.load_balancer.data.aws_vpc.default",
            "module.servidores_ec2.aws_instance.servidor",
            "module.servidores_ec2.aws_security_group.mi_grupo_de_seguridad"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:387074154401:targetgroup/terraformers-alb-target-group/0987dd24af27b76f-20230412231620919900000004",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:387074154401:targetgroup/terraformers-alb-target-group/0987dd24af27b76f",
            "target_id": "i-0d8069bc84eb9b5f9"
          },
          "dependencies": [
            "data.aws_subnet.public_subnet",
            "module.load_balancer.aws_lb_target_group.this",
            "module.load_balancer.data.aws_vpc.default",
            "module.servidores_ec2.aws_instance.servidor",
            "module.servidores_ec2.aws_security_group.mi_grupo_de_seguridad"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:387074154401:security-group/sg-008a8682197c070f0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acceso al puerto de nuestros servidores",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-008a8682197c070f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acceso al puerto del LB desde el exterior",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "387074154401",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f35e5b6d792760ae"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.servidores_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "servidor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ser-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fcf52bcf5db7b003",
            "arn": "arn:aws:ec2:us-west-2:387074154401:instance/i-04d0e1fc34f418034",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04d0e1fc34f418034",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c51d63a87586eebb",
            "private_dns": "ip-172-31-25-98.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.25.98",
            "public_dns": "ec2-34-210-90-227.us-west-2.compute.amazonaws.com",
            "public_ip": "34.210.90.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-003e6658c696952ff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "primer-servidor-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09267e6fa742b797a",
            "tags": {
              "Name": "servidor-1"
            },
            "tags_all": {
              "Name": "servidor-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0813df41f874e2c66"
            ]
          },
          "dependencies": [
            "data.aws_subnet.public_subnet",
            "module.servidores_ec2.aws_security_group.mi_grupo_de_seguridad"
          ]
        },
        {
          "index_key": "ser-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fcf52bcf5db7b003",
            "arn": "arn:aws:ec2:us-west-2:387074154401:instance/i-0bbf8d16b019e1730",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bbf8d16b019e1730",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0685673c434738eb6",
            "private_dns": "ip-172-31-44-55.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.44.55",
            "public_dns": "ec2-54-191-130-174.us-west-2.compute.amazonaws.com",
            "public_ip": "54.191.130.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-051d4c874000c2c93",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "primer-servidor-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04c505681d6112d7d",
            "tags": {
              "Name": "servidor-2"
            },
            "tags_all": {
              "Name": "servidor-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0813df41f874e2c66"
            ]
          },
          "dependencies": [
            "data.aws_subnet.public_subnet",
            "module.servidores_ec2.aws_security_group.mi_grupo_de_seguridad"
          ]
        },
        {
          "index_key": "ser-3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fcf52bcf5db7b003",
            "arn": "arn:aws:ec2:us-west-2:387074154401:instance/i-0d8069bc84eb9b5f9",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d8069bc84eb9b5f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d25e666a2451ee3d",
            "private_dns": "ip-172-31-3-182.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.3.182",
            "public_dns": "ec2-54-189-20-78.us-west-2.compute.amazonaws.com",
            "public_ip": "54.189.20.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0819d44d79cef92e4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "primer-servidor-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bba4869ae8eb6b49",
            "tags": {
              "Name": "servidor-3"
            },
            "tags_all": {
              "Name": "servidor-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0813df41f874e2c66"
            ]
          },
          "dependencies": [
            "data.aws_subnet.public_subnet",
            "module.servidores_ec2.aws_security_group.mi_grupo_de_seguridad"
          ]
        }
      ]
    },
    {
      "module": "module.servidores_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mi_grupo_de_seguridad",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:387074154401:security-group/sg-0813df41f874e2c66",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0813df41f874e2c66",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acceso al puerto del servidor desde el LB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "primer-servidor-sg",
            "name_prefix": "",
            "owner_id": "387074154401",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f35e5b6d792760ae"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}